Web Design page

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <main class="flex flex-col gap-10">
         <section class="hero-section mb-14">
-            <div id="hero-container" class="w-3/5 h-big flex mx-auto rounded-2xl bg-color-peach mt-10 px-20 pt-32 overflow-hidden">
+            <div id="hero-container" class="w-3/5 h-big flex mx-auto rounded-2xl bg-color-peach mt-10 px-20 pt-32 overflow-hidden animate__animated animate__fadeInDown">
                 <div id="hero-left-container" class="w-1/2 flex flex-col gap-10">
                     <h1 id="hero-title" class="color-white font-medium text-5xl">Award-winning custom designs and digital branding solutions</h1>
                     <p id="hero-description" class="color-white text-base">With over 10 years in the industry, we are experienced in creating fully responsive websites,
