--- a/src/pages/web-design.html
+++ b/src/pages/web-design.html
@@ -29,7 +29,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="my-14">
             <div class="grid grid-cols-3 gap-10 w-3/5 mx-auto">
                 <div class="project flex flex-col bg-color-gray cursor-pointer duration-300 rounded-2xl">
                     <picture>
@@ -94,7 +94,7 @@
             </div>
         </section>
 
-        <section>
+        <section class="mt-14 mb-20">
             <div class="grid grid-cols-2 gap-10 w-3/5 mx-auto h-80">
                 <div id="app-design-projects" class="flex flex-col items-center justify-center rounded-2xl gap-7 relative">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
@@ -109,7 +109,7 @@
             </div>
         </section>
 
-        <section class="mt-14 mb-32">
+        <section class="mt-14 mb-20">
             <div id="contact-container" class="absolute w-3/5 h-72 flex items-center justify-between mx-auto px-20 py-10 bg-color-peach rounded-2xl test chevauchement-web-design left-0 right-0 z-10">
                 <div id="contact-left-container" class="w-1/2 flex flex-col gap-5">
                     <h4 class="color-white font-medium text-4xl">Let’s talk about <br>your project</h4>
