--- a/index.html
+++ b/index.html
@@ -38,17 +38,17 @@
 
         <section class="my-14">
             <div id="projects-container" class="w-3/5 h-big grid grid-cols-2 grid-rows-2 mx-auto gap-7">
-                <div id="web-design-projects" class="row-span-2 flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
+                <div id="web-design-projects" class="bg-cover row-span-2 flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
                     <h2 class="relative color-white text-5xl font-medium uppercase pointer-events-none">Web Design</h2>
                     <a href="./src/pages/web-design.html" class="color-white text-base font-medium uppercase relative view-projects">View Projects</a>
                 </div>
-                <div id="app-design-projects" class="flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
+                <div id="app-design-projects" class="bg-cover flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
                     <h2 class="relative color-white text-5xl font-medium uppercase pointer-events-none">App Design</h2>
                     <a href="./src/pages/app-design.html" class="color-white text-base font-medium uppercase relative view-projects">View Projects</a>
                 </div>
-                <div id="graphic-design-projects" class="flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
+                <div id="graphic-design-projects" class="bg-cover flex flex-col items-center justify-center rounded-2xl gap-7 relative animate__animated opacity-0">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
                     <h2 class="relative color-white text-5xl font-medium uppercase pointer-events-none">Graphic Design</h2>
                     <a href="./src/pages/graphic-design.html" class="color-white text-base font-medium uppercase relative view-projects">View Projects</a>
