--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -83,7 +83,7 @@
     <footer class="mt-28 bg-color-black h-96 mx-auto relative">
         <div id="footer-top-container" class="h-1/2 w-3/5 flex mx-auto">
             <nav class="flex justify-between mt-32 w-full ">
-                <a href="./index.html">
+                <a href="../../index.html">
                     <img class="h-6" src="../../public/assets/shared/desktop/logo-light.png" alt="Designo Logo">
                 </a>
                 
