--- a/src/pages/web-design.html
+++ b/src/pages/web-design.html
@@ -96,12 +96,12 @@
 
         <section class="mt-14 mb-20">
             <div class="grid grid-cols-2 gap-10 w-3/5 mx-auto h-80">
-                <div id="app-design-projects" class="flex flex-col items-center justify-center rounded-2xl gap-7 relative">
+                <div id="app-design-projects" class="bg-cover flex flex-col items-center justify-center rounded-2xl gap-7 relative">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
                     <h2 class="relative color-white text-5xl font-medium uppercase pointer-events-none">App Design</h2>
                     <a href="./app-design.html" class="color-white text-base font-medium uppercase relative view-projects">View Projects</a>
                 </div>
-                <div id="graphic-design-projects" class="flex flex-col items-center justify-center rounded-2xl gap-7 relative w-full">
+                <div id="graphic-design-projects" class="bg-cover flex flex-col items-center justify-center rounded-2xl gap-7 relative w-full">
                     <div class="absolute inset-0 bg-black opacity-50 rounded-2xl peach duration-300"></div>
                     <h2 class="relative color-white text-5xl font-medium uppercase pointer-events-none">Graphic Design</h2>
                     <a href="./graphic-design.html" class="color-white text-base font-medium uppercase relative view-projects">View Projects</a>
@@ -124,7 +124,7 @@
     <footer class="mt-28 bg-color-black h-96 mx-auto relative">
         <div id="footer-top-container" class="h-1/2 w-3/5 flex mx-auto">
             <nav class="flex justify-between mt-32 w-full ">
-                <a href="./index.html">
+                <a href="../../index.html">
                     <img class="h-6" src="../../public/assets/shared/desktop/logo-light.png" alt="Designo Logo">
                 </a>
                 
