--- a/src/pages/locations.html
+++ b/src/pages/locations.html
@@ -87,7 +87,7 @@
                     <h4 class="color-white font-medium text-4xl">Let’s talk about <br>your project</h4>
                     <p class="color-white font-medium text-base">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
                 </div>
-                <a href="./src/pages/contact.html" class="flex items-center justify-center uppercase font-medium text-base bg-white rounded-lg w-40 h-14 hover-effect hover:text-white transition duration-500 ease-in-out">Get in touch</a>
+                <a href="./contact.html" class="flex items-center justify-center uppercase font-medium text-base bg-white rounded-lg w-40 h-14 hover-effect hover:text-white transition duration-500 ease-in-out">Get in touch</a>
                 
             </div>
         </section>
@@ -96,7 +96,7 @@
     <footer class="mt-28 bg-color-black h-96 mx-auto relative">
         <div id="footer-top-container" class="h-1/2 w-3/5 flex mx-auto">
             <nav class="flex justify-between mt-32 w-full ">
-                <a href="./index.html">
+                <a href="../../index.html">
                     <img class="h-6" src="../../public/assets/shared/desktop/logo-light.png" alt="Designo Logo">
                 </a>
                 
