Some style adds

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 
             <section class="my-14">
 
-                <div id="contact-container" class="absolute w-3/5 h-72 flex items-center justify-between mx-auto px-20 py-10 bg-color-peach rounded-2xl test chevauchement-contact left-0 right-0 z-10">
+                <div id="contact-container" class="absolute w-3/5 h-72 flex items-center bg-color-peach justify-between mx-auto px-20 py-10 rounded-2xl test chevauchement-contact left-0 right-0 z-10">
                     <div id="contact-left-container" class="w-1/2 flex flex-col gap-5">
                         <h4 class="color-white font-medium text-4xl">Let’s talk about <br>your project</h4>
                         <p class="color-white font-medium text-base">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
@@ -139,11 +139,21 @@
                     </div>
                     <div class="mt-14">
                         <div id="social-media" class="flex gap-5">
-                            <a class="" href="https://github.com/shadazls?tab=repositories"><img src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon"></a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
+                            </a>
+                            <a class="social-icon " href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
+                            </a>
                         </div>
                     </div>
                 </div>
