--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -25,7 +25,7 @@
 
         <main class="flex flex-col gap-10">
             <section class="location mb-14">
-                <div id="contact-container" class="w-3/5 h-less-big flex mx-auto rounded-2xl bg-color-peach mt-10 overflow-hidden gap-20">
+                <div id="contact-us-container" class="w-3/5 h-less-big flex mx-auto rounded-2xl bg-color-peach mt-10 overflow-hidden gap-20">
                     <div id="contact-left-container" class="w-1/2 flex flex-col pl-20 pt-32 gap-10">
                         <h1 id="contact-title" class="color-white font-medium text-5xl">Contact Us</h1>
                         <p id="contact-description" class="color-white text-base">Ready to take it to the next level? Let’s talk about your project or idea and find out how we can help your business grow. If you are looking for unique digital experiences that’s relatable to your users, drop us a line.</p>
@@ -111,11 +111,21 @@
                     </div>
                     <div class="mt-14">
                         <div id="social-media" class="flex gap-5">
-                            <a class="" href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon"></a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
+                            </a>
+                            <a class="social-icon " href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
+                            </a>
                         </div>
                     </div>
                 </div>
