--- a/src/pages/graphic-design.html
+++ b/src/pages/graphic-design.html
@@ -122,11 +122,21 @@
                     </div>
                     <div class="mt-14">
                         <div id="social-media" class="flex gap-5">
-                            <a class="" href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon"></a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
+                            </a>
+                            <a class="social-icon " href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
+                            </a>
                         </div>
                     </div>
                 </div>
