--- a/src/pages/locations.html
+++ b/src/pages/locations.html
@@ -26,7 +26,7 @@
         <main class="flex flex-col gap-10">
             <section class="location mb-14">
                 <div id="locations-container" class="w-3/5 grid grid-cols-3 grid-rows-3 mx-auto mt-10 overflow-hidden gap-7" style="height: 1074px;">
-                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5">
+                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5 single-location-container">
                         <h1 class="font-semibold text-4xl color-peach">Canada</h1>
                         <div class="flex mt-10 gap-28">
                             <div class="flex flex-col gap-1">
@@ -47,7 +47,7 @@
                     <div>
                         <iframe class="rounded-xl" width="100%" height="100%" src="https://maps.google.com/maps?width=100%25&amp;height=600&amp;hl=en&amp;q=19%20Balonne%20Street%20New%20South%20Wales%202443+()&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe>
                     </div>
-                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5">
+                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5 single-location-container">
                         <h1 class="font-semibold text-4xl color-peach">Autralia</h1>
                         <div class="flex mt-10 gap-28">
                             <div class="flex flex-col gap-1">
@@ -62,7 +62,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5">
+                    <div class="col-span-2 bg-color-locations z-10 rounded-2xl p-20 gap-5 single-location-container">
                         <h1 class="font-semibold text-4xl color-peach">United kingdom</h1>
                         <div class="flex mt-10 gap-28">
                             <div class="flex flex-col gap-1">
@@ -124,11 +124,21 @@
                     </div>
                     <div class="mt-14">
                         <div id="social-media" class="flex gap-5">
-                            <a class="" href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon"></a>
-                            <a href="https://github.com/shadazls?tab=repositories"><img src="../../public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon"></a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
+                            </a>
+                            <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
+                            </a>
+                            <a class="social-icon " href="https://github.com/shadazls?tab=repositories">
+                                <img class="icon" src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
+                            </a>
                         </div>
                     </div>
                 </div>
