Some fixes and design

--- a/src/pages/graphic-design.html
+++ b/src/pages/graphic-design.html
@@ -24,10 +24,10 @@
         </header>
 
         <main class="flex flex-col gap-10">
-            <section class="app-design mb-24">
-                <div id="app-design-container" class="w-3/5 h-64 flex flex-col justify-center items-center mx-auto rounded-2xl bg-color-peach mt-10 overflow-hidden gap-10">
-                    <h1 id="app-design-title" class="color-white font-medium text-5xl">Graphic Design</h1>
-                    <p id="app-design-description" class="color-white text-base">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
+            <section class="graphic-design mb-24">
+                <div id="graphic-design-container" class="w-3/5 h-64 flex flex-col justify-center items-center mx-auto rounded-2xl bg-color-peach mt-10 overflow-hidden gap-10">
+                    <h1 id="graphic-design-title" class="color-white font-medium text-5xl">Graphic Design</h1>
+                    <p id="graphic-design-description" class="color-white text-base">We deliver eye-catching branding materials that are tailored to meet your business objectives.</p>
                 </div>
             </section>
 
@@ -82,7 +82,7 @@
             </section>
 
             <section class="mt-14 mb-20">
-                <div id="contact-container" class="absolute w-3/5 h-72 flex items-center justify-between mx-auto px-20 py-10 bg-color-peach rounded-2xl test chevauchement-web-design left-0 right-0 z-10">
+                <div id="contact-container" class="absolute w-3/5 h-72 flex items-center justify-between mx-auto px-20 py-10 bg-color-peach rounded-2xl test chevauchement-graphic-design left-0 right-0 z-10">
                     <div id="contact-left-container" class="w-1/2 flex flex-col gap-5">
                         <h4 class="color-white font-medium text-4xl">Let’s talk about <br>your project</h4>
                         <p class="color-white font-medium text-base">Ready to take it to the next level? Contact us today and find out how our expertise can help your business grow.</p>
@@ -123,19 +123,19 @@
                     <div class="mt-14">
                         <div id="social-media" class="flex gap-5">
                             <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
-                                <img class="icon" src="./public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
+                                <img class="icon" src="../../public/assets/shared/desktop/icon-facebook.svg" alt="Facebook Icon">
                             </a>
                             <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
-                                <img class="icon" src="./public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
+                                <img class="icon" src="../../public/assets/shared/desktop/icon-youtube.svg" alt="Youtube Icon">
                             </a>
                             <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
-                                <img class="icon" src="./public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
+                                <img class="icon" src="../../public/assets/shared/desktop/icon-twitter.svg" alt="Twitter Icon">
                             </a>
                             <a class="social-icon" href="https://github.com/shadazls?tab=repositories">
-                                <img class="icon" src="./public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
+                                <img class="icon" src="../../public/assets/shared/desktop/icon-pinterest.svg" alt="Pinterest Icon">
                             </a>
                             <a class="social-icon " href="https://github.com/shadazls?tab=repositories">
-                                <img class="icon" src="./public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
+                                <img class="icon" src="../../public/assets/shared/desktop/icon-instagram.svg" alt="Instagram Icon">
                             </a>
                         </div>
                     </div>
